dataset1235/2025-2/610742602/users/2070606917/executions/2563853024_208040576.log
== SUBMISSION (2025-09-02 20:50:12)
-- CODE: 
preco = float(input("insira o preco do produto"))
preco_final = 15 / 100 * preco do produto
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
File "XXXX", line 2
    preco_final = 15 / 100 * preco do produto
                                   ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
File "XXXX", line 2
    preco_final = 15 / 100 * preco do produto
                                   ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
File "XXXX", line 2
    preco_final = 15 / 100 * preco do produto
                                   ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
File "XXXX", line 2
    preco_final = 15 / 100 * preco do produto
                                   ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
File "XXXX", line 2
    preco_final = 15 / 100 * preco do produto
                                   ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
File "XXXX", line 2
    preco_final = 15 / 100 * preco do produto
                                   ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:49:40)
-- CODE: 
preco = float(input("insira o preco do produto"))
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
insira o preco do produto180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
insira o preco do produto15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
insira o preco do produto2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
insira o preco do produto1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
insira o preco do produto30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
insira o preco do produto3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:50:06)
-- CODE: 
preco = float(input("insira o preco do produto"))
preco_final = 15 / 100 * preco do produto
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
File "XXXX", line 2
    preco_final = 15 / 100 * preco do produto
                                   ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
File "XXXX", line 2
    preco_final = 15 / 100 * preco do produto
                                   ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
File "XXXX", line 2
    preco_final = 15 / 100 * preco do produto
                                   ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
File "XXXX", line 2
    preco_final = 15 / 100 * preco do produto
                                   ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
File "XXXX", line 2
    preco_final = 15 / 100 * preco do produto
                                   ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
File "XXXX", line 2
    preco_final = 15 / 100 * preco do produto
                                   ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:48:46)
-- CODE: 
preco = float(input(20.0))
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
20.0180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
20.015.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
20.02.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
20.01.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
20.030.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
20.03.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:49:28)
-- CODE: 
preco = float(input("insira o preco do produto"))
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
insira o preco do produto180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
insira o preco do produto15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
insira o preco do produto2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
insira o preco do produto1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
insira o preco do produto30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
insira o preco do produto3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
